ar trebui sa mearga validarile de service la rooms, departments, hospitals